fix readability

--- a/public/index.css
+++ b/public/index.css
@@ -100,6 +100,11 @@ section {
         color:black;
         text-decoration: underline;
     }
+
+    & p {
+        font-weight: bold;
+        margin-top: 0.5rem;
+    }
 }
 
 .videolist_button {
